--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-this project is a simple android application for emulate rpg dice roll
+This project is a simple android application for emulate rpg dice roll
